# haskell_playground

./: .gitignore  haskell-course.cabal  monads.hs
4game/: Main.hs
app/: Main.hs
async/: Main.hs  ex1.hs
compiler/: Main.hs
nim/: Main.hs
rio/: Main.hs
src/: Fp12.hs  Fp7.hs  Fp8.hs  Lib.hs
sudoku/: Main.hs
test/: SpecFp12.hs
