cabal-version:      2.4
name:               haskell-course
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pugsley
maintainer:         0xpugsley@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  exposed-modules:
    Fp12
    Fp7
    Fp8
    Lib

  other-modules:    Paths_haskell_course
  hs-source-dirs:   src
  build-depends:    base ^>=4.14.3.0
  default-language: Haskell2010

executable haskell-course
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Paths_haskell_course

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base            ^>=4.14.3.0
    , haskell-course

  hs-source-dirs:   app
  default-language: Haskell2010

executable nim
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Paths_haskell_course

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   nim
  default-language: Haskell2010

executable sudoku
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Paths_haskell_course

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   sudoku
  default-language: Haskell2010

executable compiler
  import:           warnings
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Paths_haskell_course

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base  ^>=4.14.3.0
    , mtl

  hs-source-dirs:   compiler
  default-language: Haskell2010

executable 4game
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Paths_haskell_course

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base    ^>=4.14.3.0
    , random  ^>=1.2.1.1

  hs-source-dirs:   4game
  default-language: Haskell2010

test-suite haskel-course-test
  type:             exitcode-stdio-1.0
  main-is:          SpecFp12.hs
  other-modules:    Paths_haskell_course
  hs-source-dirs:   test
  build-depends:
    , containers            ^>=0.5
    , haskell-course
    , HUnit
    , test-framework
    , test-framework-hunit

  --   ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base            ^>=4.14.3.0
    , haskell-course

  default-language: Haskell2010

executable rio
  import:           warnings
  main-is:          Main.hs
  other-modules:    Paths_haskell_course
  build-depends:
    , base  ^>=4.14.3.0
    , mtl
    , rio

  hs-source-dirs:   rio
  default-language: Haskell2010

executable async
  import:           warnings
  main-is:          Main.hs
  other-modules:    Paths_haskell_course
  build-depends:
    , async
    , base   ^>=4.14.3.0
    , mtl
    , text
    , monad-control
    , say
    , stm
    , unliftio
    , hspec
    , rio


  ghc-options:      -threaded
  hs-source-dirs:   async
  default-language: Haskell2010
